03_own_chart/app/python-service.yaml
---
# Source: python-api/templates/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  labels:
    app.kubernetes.io/name: app
spec:
  selector:
    app: python-api
    app.kubernetes.io/name: app
  ports:
  - port: 80
    targetPort: api
