03_own_chart/app/redis-service.yaml
---
# Source: python-api/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app.kubernetes.io/name: app
spec:
  selector:
    app: redis
    app.kubernetes.io/name: app
  ports:
  - port: 6379
