03_own_chart/app/ingress.yaml
---
# Source: python-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-api
  labels:
    app.kubernetes.io/name: app
spec:
  ingressClassName: nginx
  rules:
  - host: "python.127.0.0.1.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-service
            port:
              number: 80
